--- a/user-module/user-domain/pom.xml
+++ b/user-module/user-domain/pom.xml
@@ -18,7 +18,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 </project>
